# RECS

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  ex1.c  ex2.c  ex3.c  ex_readme.c  test1.c
include/: recs.h
src/: bitmask.c  bitmask.h  bitmask_handler.c  bitmask_handler.h  bitmask_list.c  bitmask_list.h  component_manager.c  component_manager.h  component_pool.c  component_pool.h  def.h  ecs.c  ecs.h  entity_manager.c  entity_manager.h  recs.h
src/ecs/: bitmask.c  bitmask.h  bitmask_list.c  bitmask_list.h  component_manager.c  component_manager.h  component_pool.c  component_pool.h  ecs.c  entity_manager.c  entity_manager.h
src/impl/: bitmask.h  component_pool.h  entity_manager.h  public.h  recs_impl.h
src/util/: bitset.c  bitset.h  stack.c  stack.h
tests/: CMakeLists.txt  test_masks.c
